--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -45,21 +45,79 @@
             var emailReg = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
             var send = document.getElementById("txt_send").value;
             var receiver = document.getElementById("txt_receiver").value;
+            var password = document.getElementById("txt_password").value;
             if (!emailReg.test(send)) {
-                alert("发送邮箱格式不正确!");
+                Swal.fire("", "发送邮箱格式不正确", "error");
+                // alert("发送邮箱格式不正确!");
+                // swal("", "test", "success");
                 return;
             };
             if (!emailReg.test(receiver)) {
-                alert("接受邮箱格式不正确!");
+                Swal.fire("", "接受邮箱格式不正确", "error");
+                // alert("接受邮箱格式不正确!");
                 return;
             };
+            if (password == "" || password == null){
+                Swal.fire("", "请输入密码", "error");
+                return;
+            }
             var urlData = {sender: $('#txt_send').val(), receiver: $('#txt_receiver').val(),password:$('#txt_password').val()};
-            $.get('editmail', urlData, function (result) {
-                alert(result);
-                window.location.reload();
-                console.log(result);
+            Swal.fire({
+                type: 'question', // 弹框类型
+                title: '', //标题
+                text: "是否绑定邮箱！", //显示内容
 
-            }, 'json');
+                confirmButtonColor: '#3085d6',// 确定按钮的 颜色
+                confirmButtonText: '确定',// 确定按钮的 文字
+                showCancelButton: true, // 是否显示取消按钮
+                cancelButtonColor: '#d33', // 取消按钮的 颜色
+                cancelButtonText: "取消", // 取消按钮的 文字
+
+                focusCancel: true, // 是否聚焦 取消按钮
+                reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
+            }).then((isConfirm) => {
+                try {
+                    //判断 是否 点击的 确定按钮
+                    if (isConfirm.value) {
+                        $.get('editmail', urlData, function (result) {
+                            $(".modal").css("display", "none");
+                            $(".modal-backdrop").css("display", "none");
+                            if(result.code == 2000){
+                                Swal.fire({
+                                    type: 'success', // 弹框类型
+                                    title: '', //标题
+                                    text: "绑定成功！", //显示内容
+
+                                    confirmButtonColor: '#3085d6',// 确定按钮的 颜色
+                                    confirmButtonText: '确定',// 确定按钮的 文字
+                                    showCancelButton: false, // 是否显示取消按钮
+                                    cancelButtonColor: '#d33', // 取消按钮的 颜色
+                                    cancelButtonText: "取消", // 取消按钮的 文字
+
+                                    focusCancel: true, // 是否聚焦 取消按钮
+                                    reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
+                                }).then((isConfirm) => {
+                                    try {
+                                        //判断 是否 点击的 确定按钮
+                                        if (isConfirm.value) {
+                                            window.location.reload();
+                                        }
+                                    } catch (e) {
+                                        alert(e);
+                                    }
+                                });
+                            }
+                        }, 'json');
+
+                    }
+                    else {
+                        Swal.fire("取消", "点击了取消", "error");
+                    }
+                } catch (e) {
+                    alert(e);
+                }
+            });
+
         });
     });
     $(document).ready(function () {
