--- a/src/main/resources/templates/node.html
+++ b/src/main/resources/templates/node.html
@@ -50,6 +50,32 @@
                             <option th:value=2>矿工节点</option>
                         </select>
                     </div>
+
+                    <div class="moda moda-root">
+
+                        <h4 class="modal-title"style="width: 100%">
+                            远程连接信息
+                        </h4>
+                    </div>
+                        <div class="moda-le">
+                            <div class="">
+                                <h4 class="modal-title moda-root-info">
+                                    用户:
+                                </h4>
+                                <input class="form-control moda-in">
+                            </div>
+                            <div class="">
+                                <h4 class="modal-title moda-root-info">
+                                    密码:
+                                </h4>
+                                <input class="form-control moda-in">
+                            </div>
+                            <div class="ju-c">
+                                <button type="button" class="btn btn-primary">连接</button>
+                            </div>
+                        </div>
+
+
                 </div>
 
                 <div class="modal-footer">
