--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -39,7 +39,7 @@
                             </h4>
                             <input class="form-control moda_info" id="password" type="password">
                         </div>
-                        <div class="moda">
+                        <div class="moda" style="margin-top: 8px">
                             <h4 class="modal-title moda_info">
                                 权限:
                             </h4>
